--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "career-compass-ai",
+  "name": "career-compass-ai-beta-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
