feat: Integrate Firebase for authentication
Updates package.json to include Firebase, modifies index.html and imports to support Firebase, and implements Firebase authentication logic in App.tsx. This change replaces the previous placeholder authentication mechanism with a robust solution for user sign-in and management.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "career-compass-ai-beta-2",
+  "name": "career-compass-ai-beta-3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "@emailjs/browser": "3.11.0"
+    "@emailjs/browser": "3.11.0",
+    "firebase": "^12.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
