--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "3.11.0",
     "@google/genai": "^1.34.0",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase": "^12.8.0",
     "react": "^19.2.3",
