--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.ts",
+    "preview": "cross-env NODE_ENV=production tsx server.ts"
   },
   "dependencies": {
     "@emailjs/browser": "3.11.0",
