feat: Integrate ReactMarkdown for message formatting
This change introduces `react-markdown` and `remark-gfm` to render markdown formatting in chat messages, improving readability.

Additionally, the system instructions for the AI have been updated to specifically target high school students, focusing on academic and career path guidance relevant to their age group, and to leverage markdown for clearer output. The `FormattedText` component has been removed as it is no longer needed.

The `geminiService` now ensures AudioContexts are resumed if suspended, and the audio buffer size for the `ScriptProcessorNode` has been adjusted. The model name in `server.ts` has also been updated.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "firebase": "^12.8.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tsx": "^4.21.0",
     "ws": "^8.19.0"
   },
