--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "3.11.0",
     "@google/genai": "^1.34.0",
+    "@tailwindcss/typography": "^0.5.19",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase": "^12.8.0",
