feat: Enhance AI with user career profile
Integrates user's RIASEC career profile into AI system instructions for more personalized responses in both text and voice interactions. Updates avatar generation to use DiceBear API for improved image quality and variety. Adds `lint` script to package.json for type checking.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server.ts",
     "build": "vite build",
+    "lint": "tsc --noEmit",
     "start": "node server.ts",
     "preview": "cross-env NODE_ENV=production tsx server.ts"
   },
